--- a/text/README
+++ b/text/README
@@ -5,6 +5,7 @@ kosmickeZareni
 -připsat něco ke Stínění stanice (OK)
 -zjistit, jak se ctou ty TLD materialy od NPI
 -v dosis2 je spousta dobrych veci do vysledku (obr. atd)
+-propojit informace z detektory.tex s experimentDosis.tex
 
 POZNÁMKY
 ISS.tex
