--- a/text/main.tex
+++ b/text/main.tex
@@ -3,9 +3,9 @@
 \input{parts/preamble}
 %\includeonly{parts/titlepage}
 %\includeonly{parts/experimentDosis}
-%\includeonly{parts/ISS,parts/experimentDosis, parts/detektory}
+\includeonly{parts/ISS,parts/experimentDosis, parts/detektory}
 %\includeonly{parts/praktickaCast}
-\includeonly{parts/detektory}
+%\includeonly{parts/detektory}
 %\includeonly{parts/detektory,parts/praktickaCast}
 \begin{document}
 \pagestyle{empty}
@@ -21,9 +21,9 @@
 
 \include{parts/kosmickeZareni}
 
-\include{parts/ISS}
-
 \include{parts/detektory}
+
+\include{parts/ISS}
 
 \include{parts/experimentDosis}
 
