--- a/text/parts/experimentDosis.tex
+++ b/text/parts/experimentDosis.tex
@@ -35,7 +35,7 @@ OHB System AG, Universitätsallee 27-29, 28359 Bremen, Germany\\
 Měření byla, respektive jsou prováděna pasivními a aktivními detektory, které jsou pevně umístěny v modulu Columbus. Pasivní detektory zajišťují určení prostorové distribuce dávky a dlouhodobého vývoje pole záření, aktivní naopak slouží k určení změn pole záření v čase. V případě aktivních detektorů se jedná o dva detektory DOSTEL (DOSimetry TELescope). V dalším textu se budeme zabývat pouze pasivními detektory.
 
 \section{Rozmístění pasivních detektorů}
-V rámci experimentu DOSIS, resp. DOSIS3D je v modulu Columbus rozmístěno jedenáct PDP (Passive Detector Packages, balíčky pasivních dektorů), které obsahují termoluminiscenční detektory (TLD, thermoluminescent detectors), detektory využívající optickou stimulaci (OSLD, optically stimulated luminescent detectors) a detektory stop v pevné fázi (TED, nuclear track etched detectors). Na obr. \ref{fig:columbus_rozmisteni} vidíme rozmístění PDPs; pět z nich je umístěno na čelní stěně, dalších šest na zadní stěně. Jedenáctý balíček označený symbolem X, též označovaný jako Triple PDP (trojitý PDP), je umístěn blízko aktivních detektorů a pokrývá větší plochu než ostatní PDPs. Osm PDPs je umístěno ve skříňových modulech (viz oddíl \ref{sec:ISS_columbus}); více informací o umístění pasivních detektorů je k dostání v \cite{dosis}. %další obrázek???
+V rámci experimentu DOSIS, resp. DOSIS3D je v modulu Columbus rozmístěno jedenáct PDP (Passive Detector Packages, balíčky pasivních detektorů), které obsahují termoluminiscenční detektory (TLD), detektory využívající optickou stimulaci (OSLD) a detektory stop v pevné fázi (TED). Na obr. \ref{fig:columbus_rozmisteni} vidíme rozmístění PDPs; pět z nich je umístěno na čelní stěně, dalších šest na zadní stěně. Jedenáctý balíček označený symbolem X, též označovaný jako Triple PDP (trojitý PDP), je umístěn blízko aktivních detektorů a pokrývá větší plochu než ostatní PDPs. Osm PDPs je umístěno ve skříňových modulech (viz oddíl \ref{sec:ISS_columbus}); více informací o umístění pasivních detektorů je k dostání v \cite{dosis}. %další obrázek???
 \begin{figure}[h]
   \centering
   \includegraphics[width=\textwidth]{columbus_rozmisteni.jpg}
@@ -113,14 +113,14 @@ Z informací v oddílu \ref{sec:kosmickeZareni_solar} plyne, že za slunečního
 \end{figure}
 
 \section{Používané detektory}%AKTUALNOST TABULEK?????!!!!!!!!!!!!!!!
-Tento oddíl pojednává o používaných detektorech v experimentech DOSIS a DOSIS3D. Podrobnější informace o pasivních detektorech (např. jak probíhá měření absorbované dávky a dávkového ekvivalentu; srovnání jednotlivých typů pasivních detektorů) jsou v kapitole \ref{sec:detektory_detektory}. O aktivních detektorech tato práce nepojednává, podrobnější informace lze dohledat v \cite{activeDetectors,dosis2}.
+Tento oddíl pojednává o používaných detektorech v experimentech DOSIS a DOSIS3D. Podrobnější informace o pasivních detektorech (např. jak se určuje absorbovaná dávká a dávkový ekvivalent z naměřených dat; srovnání jednotlivých typů pasivních detektorů) jsou v kapitole \ref{sec:detektory_detektory}. O aktivních detektorech tato práce nepojednává, podrobnější informace lze dohledat v \cite{activeDetectors,dosis2}.
 
 %V případě pasivních detektorů jsou principy a fungování detektorů a potažmo i témata jako využívané kombinace detektorů pro měření absorbované dávky a dávkového ekvivalentu, srovnání pasivních detektorů mezi sebou a s aktivními detektory zpracována v kapitole \ref{sec:detektory_detektory}. V případě 
 
 V experimentech DOSIS a DOSIS3D jsou používány následující tři typy pasivních detektorů: termoluminiscenční detektory (TLD), opticky stimulované luminiscenční detektory (OSLD) a detektory stop v pevné fázi (TED). V aktivní složce měření je využívána detektorová jednotka DOSTEL. 
 
 Na konci tohoto oddílu je podrobný přehled detektorů, které používá NPI, tj. Ústav jaderné fyziky AVČR, oddělení dozimetrie záření.
-\subsection{Termoluminiscenční detektory}
+\subsection{Termoluminiscenční detektory}\label{sec:dosis_TLD}
 Používané TL detektory jsou v tabulce~\ref{tab:dosis_pouzivaneTLD}. Ta obsahuje název instituce spolu s názvy a materiály TLD, které jsou danými institucemi používány. Avšak to pro důkladný popis daného TL detektoru nestačí. Je potřeba dodat následující parametry: čtecí systém (jímž jsou detektory vyhodnocovány), jak dlouho a při jaké teplotě probíhá annealing, rychlost zahřívání, zda-li se detektor před vyhodnocením předehřívá, rychlost chlazení, kalibrační metoda a zdroj, vyhodnocení vyhřívací křivky. Lomítko v názvu TLD (v tab. \ref{tab:dosis_pouzivaneTLD}) značí dva různé TLD lišící se pouze nuklidem v materiálu: TLD-600 a MTS-6 je označení pro $^6$LiF:Mg,Ti; TLD-700 a MTS-7 pro $^7$LiF:Mg,Ti; MCP-6 pro $^6$LiF:Mg,Cu,P; MCP-7 pro $^7$LiF:Mg,Cu,P. %, tato dvojice má jinak stejné parametry. Naopak je-li nějaký materiál uveden u dvou zcela odlišně pojmenovaných TLD, pak se tyto dva TLD liší alespoň v jednom parametru.
 \begin{table}[H]
   \def\arraystretch{0.8}
@@ -176,7 +176,7 @@ Všechny používané detektory stop v pevné fázi jsou CR-39. V tab. \ref{tab:
 %dát sem tu tabulku celou; CR-39; velmi záleží na hardwaru (mikroskop, kamera) a softwaru!!!
 %pozn.: principy, z čeho co je a proste vše podrobnější si nechat do další kapitoly
 \subsection{Aktivní detektory DOSTEL}
-Detektorová jednotka DOSTEL se skládá z dvou křemíkových planárních detektorů s plochou  6,94 cm$^2$ a tloušťkou 315 $\mu$m. Tyto detektory jsou od sebe vzdálené 15 mm a jsou nastaveny ve stejné geometrii jako teleskop. Jednotka může pracovat buď v dávkovém módu (``dose mode''), nebo v teleskopickém/LET módu. V prvním případě se měří četnost nárazů a dávkový příkon, v druhém LET (při náhodném nárazu do obou detektorů se měří délka doletu částice). Z naměřených dat lze určit absorbovanou dávku a dávkový ekvivalent. DOSTEL dokáže zaznamenávat částice s LET v rozsahu 0,5--400 kev/$\mu$m \cite{activeDetectors}. 
+Detektorová jednotka DOSTEL se skládá z dvou křemíkových planárních detektorů s plochou  6,94 cm$^2$ a tloušťkou 315 $\mu$m. Tyto detektory jsou od sebe vzdálené 15 mm a jsou nastaveny ve stejné geometrii jako teleskop. Jednotka může pracovat buď v dávkovém módu (``dose mode''), nebo v teleskopickém/$\mathit{LET}$ módu. V prvním případě se měří četnost nárazů a dávkový příkon, v druhém $\mathit{LET}$ (při náhodném nárazu do obou detektorů se měří délka doletu částice). Z naměřených dat lze určit absorbovanou dávku a dávkový ekvivalent. DOSTEL dokáže zaznamenávat částice s $\mathit{LET}$ v rozsahu 0,5--400 kev/$\mu$m \cite{activeDetectors}. 
 
 V modulu Columbus jsou nainstalovány dvě jednotky DOSTEL v navzájem kolmém směru, což umožňuje získat informace o směrovosti pole záření v modulu. Navíc díky dlouhodobosti měření DOSTEL detektory je možné studovat změny v ozáření během jedenáctiletého slunečního cyklu.
 
@@ -192,7 +192,7 @@ Na obrázku \ref{fig:dosis_activeDetectors} je mimo jiné vidět DOSTEL. Informa
 NPI používá dva TL detektory, Al$_2$O$_3$:C a CaSO$_4$:Dy. Oba dva jsou vyhodnocovány pomocí čtecího systému RA’94 (THORN EMI 9789 QB)+TOLEDO 654 TLD Reader; rychlost zahřívání u obou je rovna 10 $^{\circ}$C/s; první není předehříván, druhý je předehříván na 150 $^{\circ}$C (22 s); annealing probíhá 20 minut za 700 $^{\circ}$C (Al$_2$O$_3$:C), respektive 10 minut za 380 $^{\circ}$C (CaSO$_4$:Dy); ochlazovací rychlost je vysoká u obou; kalibrování probíhá u obou pomocí $^{137}$Cs; u obou je vyhodnocována plocha pod vyhřívací křivkou. Oba dva mají průměr roven 5 mm a tloušťku rovnou 1 mm.
 
 
-Z TED používá NPI HARZLAS TD-1 a od roku 2016 i TASTRAK. HARZLAS TD-1 je leptán 18 hodin za teploty 70 $^{\circ}$C v 5 N koncentrovaném roztoku NaOH; odleptaná vrstva je tlustá 15,3 $\mu$m. Celkově je analyzována plocha o velikosti 0,09 cm$^2$. Detektor je tlustý 0.9 mm. TASTRAK se leptá dvoufázově: první fáze trvá 6 hodin a jsou při ní zobrazeny stopy vytvořené částicemi s velkým LET; při druhé fázi, která trvá dalších 9 hodin, se zobrazí i stopy pocházejících od částic s nižším LET. Celkový čas leptání je tedy 15 hodin. Buď se postupuje postupným leptáním (6 hodin leptání, vyhodnocení, 9 hodin leptání, vyhodnocení), nebo se část detektoru leptá 6 hodin a část 15 hodin, tudíž
+Z TED používá NPI HARZLAS TD-1 a od roku 2016 i TASTRAK. HARZLAS TD-1 je leptán 18 hodin za teploty 70 $^{\circ}$C v 5 N koncentrovaném roztoku NaOH; odleptaná vrstva je tlustá 15,3 $\mu$m. Celkově je analyzována plocha o velikosti 0,09 cm$^2$. Detektor je tlustý 0.9 mm. TASTRAK se leptá dvoufázově: první fáze trvá 6 hodin a jsou při ní zobrazeny stopy vytvořené částicemi s velkým $\mathit{LET}$; při druhé fázi, která trvá dalších 9 hodin, se zobrazí i stopy pocházejících od částic s nižším $\mathit{LET}$. Celkový čas leptání je tedy 15 hodin. Buď se postupuje postupným leptáním (6 hodin leptání, vyhodnocení, 9 hodin leptání, vyhodnocení), nebo se část detektoru leptá 6 hodin a část 15 hodin, tudíž
 detektor lze vyhodnotit najednou. Detektor se leptá při 70 $^{\circ}$C v 6,25 N koncentrovaném roztoku NaOH, odleptaná vrstva je tlustá 8,04/20,1 $\mu$m; analyzuje se plocha o velikost 0,5 cm$^2$ (v obou případech). Po leptání následuje u obou detektorů nasnímání stop lineárním snímacím zařízením s vysokým rozlišením (které je součástí mikroskopu HSP-1000, \cite{dosis_HSP1000}), poté jsou snímky se stopami analyzovány programem HspFit.
 
 TASTRAK původně využívaný pouze MTA EK začíná být používán i ostatními organizacemi, jelikož různorodost využívaných TED a jejich způsobů vyhodnocení komplikuje vzájemné porovnávání a interpretaci naměřených dat \cite{cesky}. 
@@ -210,7 +210,7 @@ Srovnáním dat od TL detektorů z DOSIS3D s daty získanými v ISS mimo modul C
 %Vzhledem k tomu, že tato práce je primárně zaměřena na detektory stop v pevné fázi, tak jsou informace v tomto oddíle značně povrchní. %MOZNA ZMENIT?!!!!
 Tato práce je zaměřena především na detektory stop v pevné fází, a proto jsou následující informace zestručněny. 
 \subsection{Srovnání dat pasivních detektorů v rámci jedné sady}
-V obr. \ref{fig:dosis_vysl_jednaSada} jsou uvedeny dávkové příkony naměřené detektory z 2. sady DOSIS3D v závislosti na pozici detektoru, tzn. na PDP. Jedná se o TL detektory z materiálů: $^6$LiF:Mg,Ti; $^7$LiF:Mg,Ti; CaF$_2$:Tm; $^{\text{Nat}}$LiF:Mg,Ti; $^6$LiF:Mg,Cu,P; $^7$LiF:Mg,Cu,P; Al$_2$O$_3$:C a CaSO$_4$:Dy a o všechny OSL detektory. Je vidět, že data ze všech detektorů sledují v podstatě stejný trend a že dávkové příkony z detektorů stejného materiálu vycházejí přibližně stejně. Avšak na druhou stranu jsou zde patrné rozdíly mezi naměřenými dávkovými příkony detektorů různých materiálů. Jedním z důvodů je rozdílná účinnost detekce těžkých nabitých částic každého TL/OSL materiálu; to je např. případ materiálů Al$_2$O$_3$:C a CaSO$_4$:Dy
+V obr. \ref{fig:dosis_vysl_jednaSada} jsou uvedeny dávkové příkony naměřené detektory z 2. sady DOSIS3D v závislosti na pozici detektoru, tzn. na PDP. Jedná se o TL detektory z materiálů: $^6$LiF:Mg,Ti; $^7$LiF:Mg,Ti; CaF$_2$:Tm; $^{\text{Nat}}$LiF:Mg,Ti; $^6$LiF:Mg,Cu,P; $^7$LiF:Mg,Cu,P; Al$_2$O$_3$:C a CaSO$_4$:Dy a o všechny OSL detektory. Je vidět, že data ze všech detektorů sledují v podstatě stejný trend a že dávkové příkony z detektorů stejného materiálu vycházejí přibližně stejně. Avšak na druhou stranu jsou zde patrné rozdíly mezi naměřenými dávkovými příkony detektorů různých materiálů. Jedním z důvodů je rozdílná účinnost detekce těžkých nabitých částic každého TL/OSL materiálu (viz oddíl \ref{sec:detektory_TLD}); to je např. případ materiálů Al$_2$O$_3$:C a CaSO$_4$:Dy
 používaných NPI.
 \begin{table}[H]
   \centering
