--- a/text/parts/preamble.tex
+++ b/text/parts/preamble.tex
@@ -77,3 +77,6 @@ urlcolor=blue, citecolor=blue, pdfauthor=MichalSestak, pdftitle=DoseDistribution
 %\usepackage{lmodern}
 %\usepackage[author={Michal Šesták}]{pdfcomment}
 
+%definovani maker \mathit{}
+\newcommand{\RR}{\mathit{RR}}
+\newcommand{\LET}{\mathit{LET}}
