--- a/text/citace.bib
+++ b/text/citace.bib
@@ -87,7 +87,7 @@ keywords = "Messungen des Strahlenfeldes "
     language={English},
 }
 
-@phdthesis{etchDetectors,
+@phdthesis{thesisKPBrabcova,
     author={Pachnerová Brabcová,K.},
     year={2010},
     school={České vysoké učení technické v Praze, FJFI, Katedra jaderné chemie},
@@ -272,6 +272,44 @@ author = "J.K. Pálfalvi",
 keywords = "Space dosimetry",
 keywords = "SSNTD",
 keywords = "Proton detection "
+}
+
+%tracks formation
+@article{spikeModel,
+author = {R. L. Fleischer and P. B. Price and R. M. Walker},
+title = {Ion Explosion Spike Mechanism for Formation of Charged Particle Tracks in Solids},
+journaltitle = {Journal of Applied Physics},
+volume = {36},
+number = {11},
+pages = {3645-3652},
+year = {1965},
+doi = {10.1063/1.1703059},
+url = {http://dx.doi.org/10.1063/1.1703059},
+eprint = {http://dx.doi.org/10.1063/1.1703059}
+}
+
+%objevTED
+@article{objevTED,
+   author = {{Young}, D.~A.},
+    title = {Etching of Radiation Damage in Lithium Fluoride},
+  journaltitle = {Nature},
+     year = {1958},
+   volume = {182},
+    pages = {375-377},
+      doi = {10.1038/182375a0},
+   adsurl = {http://adsabs.harvard.edu/abs/1958Natur.182..375Y},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+%kyslik a TED
+@article{kyslikTED,
+   author = {Yamauchi, Tomoya},
+    title = {Studies on the nuclear tracks in CR-39 plastics},
+  journaltitle = {Radiation Measurements},
+     year = {2003},
+   volume = {36(1-6)},
+    pages = {73-81},
+      doi = {10.1016/S1350-4487(03)00099-4},
 }
 
 %dosis
