--- a/text/main.tex
+++ b/text/main.tex
@@ -3,9 +3,9 @@
 \input{parts/preamble}
 %\includeonly{parts/titlepage}
 %\includeonly{parts/experimentDosis}
-\includeonly{parts/ISS,parts/experimentDosis, parts/detektory}
+%\includeonly{parts/ISS,parts/experimentDosis, parts/detektory, parts/praktickaCast}
 %\includeonly{parts/praktickaCast}
-%\includeonly{parts/detektory}
+%\includeonly{parts/detektory, parts/ISS}
 %\includeonly{parts/detektory,parts/praktickaCast}
 \begin{document}
 \pagestyle{empty}
